<resources>
    <string name="app_name">Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="exit_label">Exit</string>
    <string name="about_label">About</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
    Sudoku is a logic-based number placement puzzle.
    Starting with a partially completed 9x9 grid, the
    objective is to fill the grid so that each
    row, each column, and each of the 3x3 boxes
    (also called <i>blocks</i>) contains the digits
    1 to 9 exactly once.
    </string>
    <string name="under_deve">Game is under development. Please stay tuned...</string>

    <string name="change_back_color">Change Background Color</string>
    <string name="settings_label">Settings...</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
</resources>
